# Medical-UI-Pro

./: .gitignore  CHANGELOG.md  CM0112_myo_NIH3D.stl  CONTRIBUTING.md  FULL.stl  LICENSE  README.md  gl_renderer.py  heart_NIH3D.stl  lungs_heart_reoriented.stl  main.py  models.py  pyproject.toml  renderer.py  requirements-lock.txt  requirements.txt  style.qss  style_light.qss
.github/workflows/: lint.yml
docs/: audit_report.md  social_media_assets.md
tests/: __init__.py  test_gestures.py  test_models.py  test_renderer.py
